--- a/src/styles/explorer.css
+++ b/src/styles/explorer.css
@@ -75,6 +75,8 @@
     --light-status-success-color: #00722D;
     --light-status-error-color: #C40E3A;
     --light-search-bar-default: #FFFFFF;
+    --light-graph-line-color: #5A4DFF;
+
     /*
     --light-graphbar-blue: #5A4DFF;
     */
@@ -119,6 +121,7 @@
     /*
     --dark-graphbar-blue: #1300FF;
     */
+    --dark-graph-line-color: #1300FF;
 
     /* CURRENT MODE */
     --text-primary: var(--light-text-primary);
@@ -145,6 +148,7 @@
     --status-success-color: var(--light-status-success-color);
     --status-error-color: var(--light-status-error-color);
     --search-bar-default: var(--light-search-bar-default);
+    --graph-line-color:  var(--light-graph-line-color);
 
     --network-button-text-color: var(--light-network-button-text-color);
     --network-button-color: var(--light-network-button-color);
@@ -212,6 +216,12 @@
     --yellow-dark-chip-color: #FFE221D4;
     --yellow-dark-text-accent-color: #FFDE00;
     --yellow-dark-border-accent-color: #FFDE00;
+
+
+    --graph-line-color: #FFDE00;
+    --graph-gradient-start-color: hsl(from var(--graph-line-color) h s l / 16%);
+    --graph-gradient-end-color: hsl(from #2962FF h s l / 5%);
+
 }
 
 
