--- a/public/style-config.css
+++ b/public/style-config.css
@@ -7,17 +7,6 @@
 
     /* LIGHT MODE */
 
-    /* the following are defaults for network theme colors
-       the actual values will be provided by configuration parameters in networks-config.json
-    */
-    --light-network-button-text-color: #FFFFFF; /* NetworkEntry.lightButtonTextColor */
-    --light-network-button-color: #7A1B80; /* NetworkEntry.lightButtonColor */
-    --light-network-chip-text-color: #FFFFFF; /* NetworkEntry.lightChipTextColor */
-    --light-network-chip-color: #A7449D; /* NetworkEntry.lightChipColor */
-    --light-network-text-accent-color: #E0007B; /* NetworkEntry.lightTextAccentColor */
-    --light-network-border-accent-color: #B664AE; /* NetworkEntry.lightBorderAccentColor */
-    --light-network-graph-bar-color: #E183E7; /* NetworkEntry.lightGraphBarColor */
-
     --light-text-primary: #050505;
     --light-text-secondary: #888888;
     --light-text-accent2: #255CF4;
@@ -33,7 +22,7 @@
     --light-table-border: #EFEFEF;
     --light-chip-text-primary: white;
     --light-chip-secondary-default: #EFEFEF;
-    --light-button-text-secondary: var(--text-primary);
+    --light-button-text-secondary: var(--light-text-primary);
     --light-button-background-secondary: #EFEFEF;
     --light-copy-button-text: #FFFFFF;
     --light-copy-button-background: #2C2C2C;
@@ -44,19 +33,7 @@
     --light-search-bar-default: #FFFFFF;
     --light-graph-line-color: #5A4DFF;
 
-
     /* DARK MODE */
-
-    /* the following are defaults for network theme colors
-       the actual values will be provided by configuration parameters in networks-config.json
-    */
-    --dark-network-button-text-color: #FFFFFF; /* NetworkEntry.darkButtonTextColor */
-    --dark-network-button-color: #7A1B80; /* NetworkEntry.darkButtonColor */
-    --dark-network-chip-text-color: #FFFFFF; /* NetworkEntry.darkChipTextColor */
-    --dark-network-chip-color: #A7449D; /* NetworkEntry.darkChipColor */
-    --dark-network-text-accent-color: #F258AC; /* NetworkEntry.darkTextAccentColor */
-    --dark-network-border-accent-color: #7A1B80; /* NetworkEntry.darkBorderAccentColor */
-    --dark-network-graph-bar-color: #D245DB; /* NetworkEntry.darkGraphBarColor */
 
     --dark-text-primary: #FFFFFF;
     --dark-text-secondary: #A2A2A2;
@@ -73,7 +50,7 @@
     --dark-table-border: #1F1F1F;
     --dark-chip-text-primary: white;
     --dark-chip-secondary-default: #545454;
-    --dark-button-text-secondary: var(--text-primary);
+    --dark-button-text-secondary: var(--dark-text-primary);
     --dark-button-background-secondary: #2C2C2C;
     --dark-copy-button-text: #050505;
     --dark-copy-button-background: #EFEFEF;
@@ -83,4 +60,53 @@
     --dark-status-error-color: #C40E3A;
     --dark-search-bar-default: #2C2C2C;
     --dark-graph-line-color: #1300FF;
+
+
+    /* NETWORK COLOR MAPS */
+
+    --purple-light-button-text-color: #FFFFFF;
+    --purple-light-button-color: #7A1B80;
+    --purple-light-chip-text-color: #FFFFFF;
+    --purple-light-chip-color: #A7449D;
+    --purple-light-text-accent-color: #E0007B;
+    --purple-light-border-accent-color: #B664AE;
+    --purple-light-graph-bar-color: #E183E7;
+    --purple-dark-button-text-color: #FFFFFF;
+    --purple-dark-button-color: #7A1B80;
+    --purple-dark-chip-text-color: #FFFFFF;
+    --purple-dark-chip-color: #A7449D;
+    --purple-dark-text-accent-color: #F258AC;
+    --purple-dark-border-accent-color: #7A1B80;
+    --purple-dark-graph-bar-color: #D245DB;
+
+    --orange-light-button-text-color: #FFFFFF;
+    --orange-light-button-color: #FF4D00;
+    --orange-light-chip-text-color: #000000;
+    --orange-light-chip-color: #FF6B2BE5;
+    --orange-light-text-accent-color: #C73C00;
+    --orange-light-border-accent-color: #C2C2C2;
+    --orange-light-graph-bar-color: #FF4D0099;
+    --orange-dark-button-text-color: #FFFFFF;
+    --orange-dark-button-color: #FF4D00;
+    --orange-dark-chip-text-color: #000000;
+    --orange-dark-chip-color: #EB6931;
+    --orange-dark-text-accent-color: #FF4D00;
+    --orange-dark-border-accent-color: #FF4D00;
+    --orange-dark-graph-bar-color: #FF4D00E5;
+
+    --yellow-light-button-text-color: #050505;
+    --yellow-light-button-color: #FFDE00;
+    --yellow-light-chip-text-color: #000000;
+    --yellow-light-chip-color: #FFDE00BD;
+    --yellow-light-text-accent-color: #B87700;
+    --yellow-light-border-accent-color: #C2C2C2;
+    --yellow-dark-button-text-color: #050505;
+    --yellow-dark-button-color: #FFDE00;
+    --yellow-dark-chip-text-color: #000000;
+    --yellow-dark-chip-color: #FFE221D4;
+    --yellow-dark-text-accent-color: #FFDE00;
+    --yellow-dark-border-accent-color: #FFDE00;
+
+    --graph-gradient-start-color: hsl(from var(--graph-line-color) h s l / 16%);
+    --graph-gradient-end-color: hsl(from #2962FF h s l / 5%);
 }
