Add h-text-success class in explorer.css
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/src/styles/explorer.css
+++ b/src/styles/explorer.css
@@ -293,6 +293,10 @@ ul {
     color: var(--text-secondary);
 }
 
+.h-text-success {
+    color: var(--text-success);
+}
+
 .h-text-error {
     color: var(--text-error);
 }
