Add icon-in-table CSS class.
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/src/styles/explorer.css
+++ b/src/styles/explorer.css
@@ -430,6 +430,11 @@ a.h-banner-link:hover {
     }
 }
 
+.icon-in-table {
+    display: block;
+    float: right;
+}
+
 /*  ============================================================================
     Maintain code which is still using BULMA classes
 */
