Replace deprecated declaration in .h-should-wrap class.
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/_frontend/src/styles/explorer.css
+++ b/_frontend/src/styles/explorer.css
@@ -310,7 +310,8 @@ ul {
 
 
 .h-should-wrap {
-    word-break: break-word;
+    overflow-wrap: anywhere;
+    word-break: normal;
 }
 
 hr.horizontal-line {
