Add .compound-value class to explorer.css (for further use).
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/_frontend/src/styles/explorer.css
+++ b/_frontend/src/styles/explorer.css
@@ -436,6 +436,20 @@ a.h-banner-link:hover {
     float: right;
 }
 
+.compound-value {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 4px;
+    justify-content: flex-end;
+}
+
+@media (min-width: 768px) {
+    .compound-value {
+        justify-content: flex-start;
+    }
+}
+
 /*  ============================================================================
     Maintain code which is still using BULMA classes
 */
